# localaiaudio

./: .env  .gitignore  DEPLOYMENT_DISTRIBUTION_PLAN.md  DISTRIBUTION_AND_SECURITY.md  INSTALLATION.md  POSSIBLE_UPGRADES.md  QUICKSTART.md  README.md  SETTINGS_IMPL.md  SETUP_COMPLETE.md  TASKS.md  WINDOWS.md  allow-app.sh  attach_output.txt  create_installer_dmg.sh  launch-python.sh  package-lock.json  package.json
docs/embedded-runtime/: README.md
electron-app/: README.md  inspect.js  package-lock.json  package.json  start.sh  tsconfig.json  webpack.main.config.cjs  webpack.renderer.config.cjs
electron-app/app/: main.js
electron-app/renderer/: index.html  index.jsx  styles.css
electron-app/renderer/components/: MarkdownMessage.jsx
electron-app/resources/backend/: conversationStore.js  index.js  storage.js
electron-app/resources/backend/public/: index.html  main.js
electron-app/source/: main.cjs  main.js  preload.cjs
newappbackend/: README.md  package-lock.json  package.json
newappbackend/public/: index.html  main.js
newappbackend/server/: conversationStore.js  index.js  storage.js
public/: app.js  index.html  license.html  license.js  onboarding.css  onboarding.html  onboarding.js  settings.js  social-panel.html  social-panel.js  styles.css  tauri-app.js
python/: README.md  install_dependencies.py  sidecar.py
scripts/: demoHardwareHandler.js  prepare_binaries.sh  runInstaller.js  setup_and_run.sh  startServer.js
src/: index.js
src-tauri/: Cargo.toml  model_catalog.json  tauri.conf.json  tauri.ollama.conf.json  tauri.python.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: conversation.rs  document_parser.rs  embedded_runtime.rs  hardware.rs  license_public_key.pem  local_license.rs  main.rs  model_catalog.rs  model_downloader.rs  ollama.rs  onboarding.rs  python_engine.rs  storage.rs  transcription.rs
src/api/: hardwareHandler.js
src/chat/: chatService.js  localLlamaRuntime.js
src/config/: writeAppConfig.js
src/hardware/: hardwareScanStub.js
src/installer/: runInstaller.js
src/ollama/: ollamaBootstrap.js
src/server/: httpServer.js
src/setup/: createStorageLayout.js
src/utils/: baseDir.js
