[package]
name = "privateai-voice"
version = "0.1.0"
description = "PrivateAI Voice – Offline Audio Transcription"
authors = ["CaribbeanTechS"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all", "dialog-open", "dialog-save", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

# Whisper transcription - using whisper.cpp bindings for local inference
whisper-rs = { version = "0.12" }
hound = "3.5"  # For reading WAV files

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
